cmake_minimum_required(VERSION 3.20)
project(lecture_1)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE__CXX__STANDARD_REQURED ON)
add_executable(hello_world hello_world.cpp)
add_compile_options(-Wall -Wextra -O3 -g)
add_compile_options(-stdlib=libc++)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_BUILD_TYPE Debug)
